[gd_scene load_steps=7 format=3 uid="uid://bhlkx8sq023rp"]

[ext_resource type="Script" path="res://src/platforming/scripts/Enemies/level_2/bat_script.gd" id="1_e63xu"]
[ext_resource type="Texture2D" uid="uid://bkw8ti0jsa80a" path="res://assets/Enemies/Free Enemies/Free Enemies/Anim/Bat 1A[anim].png" id="2_iy4b0"]

[sub_resource type="Animation" id="Animation_qgmq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/Battle_Collision_Shape:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2)]
}

[sub_resource type="Animation" id="Animation_kk48h"]
resource_name = "idle_facing_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/Battle_Collision_Shape:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2), PackedVector2Array(7, -1, 7, 2, 9, 2, 9, 3, 11, 3, 11, 4, 12, 4, 12, 5, 14, 5, 14, 7, 13, 7, 13, 9, 12, 9, 12, 10, 11, 10, 11, 11, 10, 11, 10, 12, 8, 12, 8, 13, 6, 13, 6, 14, 4, 14, 4, 15, 7, 15, 7, 16, 14, 16, 14, 15, 18, 15, 18, 14, 20, 14, 20, 13, 21, 13, 21, 12, 23, 12, 23, 11, 25, 11, 25, 9, 26, 9, 26, 7, 27, 7, 27, 5, 28, 5, 28, 3, 26, 3, 26, 2, 25, 2, 25, 1, 23, 1, 23, 0, 22, 0, 22, -1, 20, -1, 20, -2, 19, -2, 19, -3, 17, -3, 17, -2, 16, -2, 16, -4, 15, -4, 15, -5, 14, -5, 14, -6, 12, -6, 12, -4, 11, -4, 11, -5, 9, -5, 9, -2, 8, -2, 8, -1), PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2), PackedVector2Array(7, -1, 7, 2, 9, 2, 9, 3, 11, 3, 11, 4, 12, 4, 12, 5, 14, 5, 14, 7, 13, 7, 13, 9, 12, 9, 12, 10, 11, 10, 11, 11, 10, 11, 10, 12, 8, 12, 8, 13, 6, 13, 6, 14, 4, 14, 4, 15, 7, 15, 7, 16, 14, 16, 14, 15, 18, 15, 18, 14, 20, 14, 20, 13, 21, 13, 21, 12, 23, 12, 23, 11, 25, 11, 25, 9, 26, 9, 26, 7, 27, 7, 27, 5, 28, 5, 28, 3, 26, 3, 26, 2, 25, 2, 25, 1, 23, 1, 23, 0, 22, 0, 22, -1, 20, -1, 20, -2, 19, -2, 19, -3, 17, -3, 17, -2, 16, -2, 16, -4, 15, -4, 15, -5, 14, -5, 14, -6, 12, -6, 12, -4, 11, -4, 11, -5, 9, -5, 9, -2, 8, -2, 8, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle_Collision/Battle_Collision_Shape:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Battle_Collision/Battle_Collision_Shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_px1go"]
resource_name = "idle_facing_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle_Collision/Battle_Collision_Shape:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2), PackedVector2Array(7, -1, 7, 2, 9, 2, 9, 3, 11, 3, 11, 4, 12, 4, 12, 5, 14, 5, 14, 7, 13, 7, 13, 9, 12, 9, 12, 10, 11, 10, 11, 11, 10, 11, 10, 12, 8, 12, 8, 13, 6, 13, 6, 14, 4, 14, 4, 15, 7, 15, 7, 16, 14, 16, 14, 15, 18, 15, 18, 14, 20, 14, 20, 13, 21, 13, 21, 12, 23, 12, 23, 11, 25, 11, 25, 9, 26, 9, 26, 7, 27, 7, 27, 5, 28, 5, 28, 3, 26, 3, 26, 2, 25, 2, 25, 1, 23, 1, 23, 0, 22, 0, 22, -1, 20, -1, 20, -2, 19, -2, 19, -3, 17, -3, 17, -2, 16, -2, 16, -4, 15, -4, 15, -5, 14, -5, 14, -6, 12, -6, 12, -4, 11, -4, 11, -5, 9, -5, 9, -2, 8, -2, 8, -1), PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2), PackedVector2Array(7, -1, 7, 2, 9, 2, 9, 3, 11, 3, 11, 4, 12, 4, 12, 5, 14, 5, 14, 7, 13, 7, 13, 9, 12, 9, 12, 10, 11, 10, 11, 11, 10, 11, 10, 12, 8, 12, 8, 13, 6, 13, 6, 14, 4, 14, 4, 15, 7, 15, 7, 16, 14, 16, 14, 15, 18, 15, 18, 14, 20, 14, 20, 13, 21, 13, 21, 12, 23, 12, 23, 11, 25, 11, 25, 9, 26, 9, 26, 7, 27, 7, 27, 5, 28, 5, 28, 3, 26, 3, 26, 2, 25, 2, 25, 1, 23, 1, 23, 0, 22, 0, 22, -1, 20, -1, 20, -2, 19, -2, 19, -3, 17, -3, 17, -2, 16, -2, 16, -4, 15, -4, 15, -5, 14, -5, 14, -6, 12, -6, 12, -4, 11, -4, 11, -5, 9, -5, 9, -2, 8, -2, 8, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle_Collision/Battle_Collision_Shape:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Battle_Collision/Battle_Collision_Shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(36, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8k7k"]
_data = {
"RESET": SubResource("Animation_qgmq6"),
"idle_facing_left": SubResource("Animation_kk48h"),
"idle_facing_right": SubResource("Animation_px1go")
}

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_e63xu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iy4b0")
offset = Vector2(18, 0)
hframes = 4
vframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8k7k")
}

[node name="MovementTimer" type="Timer" parent="."]

[node name="Battle_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Battle_Collision_Shape" type="CollisionPolygon2D" parent="Battle_Collision"]
polygon = PackedVector2Array(7, 2, 7, 5, 9, 5, 9, 6, 11, 6, 11, 7, 12, 7, 12, 8, 14, 8, 14, 9, 17, 9, 17, 10, 20, 10, 20, 11, 21, 11, 21, 12, 22, 12, 22, 10, 23, 10, 23, 11, 25, 11, 25, 12, 26, 12, 26, 10, 25, 10, 25, 7, 26, 7, 26, 6, 27, 6, 27, 5, 28, 5, 28, 3, 30, 3, 30, 2, 36, 2, 36, 1, 43, 1, 43, 2, 45, 2, 45, 1, 44, 1, 44, 0, 43, 0, 43, -1, 42, -1, 42, -2, 41, -2, 41, -3, 39, -3, 39, -4, 37, -4, 37, -5, 34, -5, 34, -6, 31, -6, 31, -7, 24, -7, 24, -8, 19, -8, 19, -7, 17, -7, 17, -6, 18, -6, 18, -5, 16, -5, 16, -4, 15, -4, 15, -3, 14, -3, 12, -3, 12, -1, 11, -1, 11, -2, 9, -2, 9, 1, 8, 1, 8, 2)

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="body_entered" from="Battle_Collision" to="." method="_on_battle_collision_body_entered"]
